--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT"
 readme = "README.md"
 repository = "https://github.com/hansingt/l293x"
 edition = "2021"
+rust-version = "1.60"
 include = [
     "LICENSE",
     "README.md",
