Collect code coverage in separate job running on nightly

--- a/.github/actions/build_and_test/action.yml
+++ b/.github/actions/build_and_test/action.yml
@@ -6,6 +6,10 @@ inputs:
     description: Rust version to use
     default: stable
     required: false
+  coverage:
+    description: Collect code coverage data
+    default: 'false'
+    required: false
 
 outputs:
   codecov-report:
@@ -20,18 +24,31 @@ runs:
       with:
         toolchain: ${{ inputs.rust-version }}
         components: llvm-tools
+      if: inputs.coverage == 'true'
+    - name: Setup rust toolchain
+      uses: dtolnay/rust-toolchain@master
+      with:
+        toolchain: ${{ inputs.rust-version }}
+      if: inputs.coverage != 'true'
     - name: Install LLVM Tools
       uses: taiki-e/install-action@cargo-llvm-cov
+      if: inputs.coverage == 'true'
     - name: Install cargo-nextest
       uses: taiki-e/install-action@nextest
     - name: Build
-      run: cargo build --verbose
       shell: bash
+      run: cargo build --verbose
     - name: Test
       id: run_tests
       env:
         REPORT_PATH: coverage.xml
+      shell: bash
       run: |
         cargo llvm-cov nextest --verbose --no-fail-fast --codecov --output-path="${REPORT_PATH}"
         echo "report-path=${REPORT_PATH}" >> "$GITHUB_OUTPUT"
+      if: inputs.coverage == 'true'
+    - name: Test
       shell: bash
+      run: |
+        cargo nextest --verbose
+      if: inputs.coverage != 'true'
