--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,28 +50,33 @@ jobs:
   msrv:
     runs-on: ubuntu-latest
     outputs:
-      msrv: ${{ steps.msrv.outputs.msrv }}
+      msrv: "${{ steps.msrv.outputs.msrv }}"
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/msrv
         id: msrv
 
-  build_and_test:
-    needs: [msrv]
-    strategy:
-      matrix:
-        rust-version: ["${{ needs.msrv.outputs.msrv }}", nightly]
-      fail-fast: false
+  coverage:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/build_and_test
         id: build_and_test
         with:
-          rust-version: ${{ matrix.rust-version }}
+          rust-version: nightly
+          coverage: 'true'
       - name: Upload coverage report to Codecov
         uses: codecov/codecov-action@v4
-        if: matrix.rust-version == 'nightly'
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: ${{ steps.build_and_test.outputs.codecov }}
+
+  build_and_test:
+    needs: [msrv]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/build_and_test
+        id: build_and_test
+        with:
+          rust-version: "${{ needs.msrv.outputs.msrv }}"
