--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,20 +29,19 @@ jobs:
       - uses: ./.github/actions/msrv
         id: msrv
 
-  build_and_test:
+  test:
     needs: [msrv]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: ./.github/actions/build_and_test
-        id: build_and_test
+      - uses: ./.github/actions/test
         with:
           rust-version: "${{ needs.msrv.outputs.msrv }}"
 
   publish:
     name: Publish
     runs-on: ubuntu-latest
-    needs: [check-version, audit, build_and_test]
+    needs: [check-version, audit, test]
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
