--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,9 +5,6 @@ on:
     tags:
       - v*.*.*
 
-env:
-  CARGO_TERM_COLOR: always
-
 jobs:
   check-version:
     runs-on: ubuntu-latest
@@ -19,30 +16,32 @@ jobs:
   audit:
     name: Audit
     runs-on: ubuntu-latest
-    needs: [check-version]
     steps:
       - uses: actions/checkout@v4
       - uses: ./.github/actions/audit
 
-  build_and_test:
-    strategy:
-      matrix:
-        rust-version: [stable]
-        os: [ubuntu-latest, windows-latest, macos-latest]
-      fail-fast: false
-    runs-on: ${{ matrix.os }}
-    needs: [check-version]
+  msrv:
+    runs-on: ubuntu-latest
+    outputs:
+      msrv: "${{ steps.msrv.outputs.msrv }}"
     steps:
       - uses: actions/checkout@v4
-      - uses: ./.github/actions/build_and_test
-        id: build_and_test
+      - uses: ./.github/actions/msrv
+        id: msrv
+
+  test:
+    needs: [msrv]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/test
         with:
-          rust-version: ${{ matrix.rust-version }}
+          rust-version: "${{ needs.msrv.outputs.msrv }}"
 
   publish:
     name: Publish
     runs-on: ubuntu-latest
-    needs: [check-version, audit, build_and_test]
+    needs: [check-version, audit, test]
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
