--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,4 @@
+default_stages: [pre-commit]
 repos:
   # General syntax and repo checks
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -27,3 +28,9 @@ repos:
       - id: fmt
       - id: cargo-check
       - id: clippy
+  # Ensure commit message matches the conventional commits template
+  - repo: https://github.com/compilerla/conventional-pre-commit
+    rev: v3.2.0
+    hooks:
+      - id: conventional-pre-commit
+        stages: [commit-msg]
