--- a/cliff.toml
+++ b/cliff.toml
@@ -4,10 +4,7 @@
 [changelog]
 header = """
 # Changelog\n
-All notable changes to this project will be documented in this file.
-
-The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
-and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).\n
+This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).\n
 """
 # template for the changelog body
 # https://keats.github.io/tera/docs/#introduction
@@ -20,7 +17,8 @@ body = """
 {% for group, commits in commits | group_by(attribute="group") %}
     ### {{ group | upper_first }}
     {% for commit in commits %}
-        - {{ commit.message | upper_first }}\
+        - {{ commit.message | split(pat="\n") | first | trim | upper_first }}\
+          {% if commit.github.username %} by @{{ commit.github.username }}{%- endif -%}
     {% endfor %}
 {% endfor %}\n
 """
