--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,39 +13,59 @@ jobs:
       - name: Check version
         uses: tcurdt/action-verify-version-cargo@master
 
-  audit:
-    name: Audit
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/audit
-
-  msrv:
+  generate-changelog:
+    name: Generate changelog
     runs-on: ubuntu-latest
     outputs:
-      msrv: "${{ steps.msrv.outputs.msrv }}"
+      latest: ${{ steps.git-cliff-latest.outputs.content }}
+      full: ${{ steps.git-cliff-full.outputs.content }}
     steps:
+      # Do a full checkout, to make sure, the changelog is complete
       - uses: actions/checkout@v4
-      - uses: ./.github/actions/msrv
-        id: msrv
-
-  test:
-    needs: [msrv]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/test
         with:
-          rust-version: "${{ needs.msrv.outputs.msrv }}"
+          fetch-depth: 0
+      - name: Generate changelog (latest)
+        uses: orhun/git-cliff-action@v3
+        id: git-cliff-latest
+        with:
+          config: cliff.toml
+          args: --latest --no-exec --github-repo ${{ github.repository }}
+      - name: Generate a changelog (full)
+        uses: orhun/git-cliff-action@v3
+        id: git-cliff-latest
+        with:
+          config: cliff.toml
+          args: --no-exec --github-repo ${{ github.repository }}
 
-  publish:
-    name: Publish
+  publish_crates_io:
+    name: Publish to crates.io
     runs-on: ubuntu-latest
-    needs: [check-version, audit, test]
+    needs: [check-version, generate-changelog]
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
+      - name: Write Changelog
+        shell: bash
+        run: echo "${{ needs.generate-changelog.outputs.full }}" > CHANGELOG.md
       - name: Publish
-        # We can use --no-verify here, because they are verified already by the
-        # build_and_test job(s).
-        run: cargo publish --verbose --token ${{ secrets.CARGO_REGISTRY_TOKEN }} --no-verify
+        run: |
+          cargo publish \
+            --verbose \
+            --no-verify \
+            --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
+
+  create_release:
+    name: Create GitHub release
+    runs-on: ubuntu-latest
+    needs: [check-version, generate-changelog]
+    permissions:
+      packages: write
+    steps:
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          prerelease: ${{ contains(github.ref, '-') }}
+          generate_release_notes: false
+          body: ${{ needs.generate-changelog.outputs.latest }}
+          make_latest: "true"
