--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,7 +57,7 @@ jobs:
   create_release:
     name: Create GitHub release
     runs-on: ubuntu-latest
-    needs: [check-version, generate-changelog]
+    needs: [generate-changelog, publish_crates_io]
     permissions:
       packages: write
     steps:
@@ -68,4 +68,3 @@ jobs:
           prerelease: ${{ contains(github.ref, '-') }}
           generate_release_notes: false
           body: ${{ needs.generate-changelog.outputs.latest }}
-          make_latest: "true"
