--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
         uses: codecov/codecov-action@v4
         with:
           name: code-coverage-report
-          file: ${{ steps.coverage.outputs.codecov }}
+          file: ${{ steps.tests.outputs.report-path }}
           flags: unittests
           fail_ci_if_error: true
           token: ${{ secrets.CODECOV_TOKEN }}
