--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,6 +52,7 @@ jobs:
           cargo publish \
             --verbose \
             --no-verify \
+            --allow-dirty \
             --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
 
   create_release:
