build: let dependabot update GitHub actions automatically

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,4 +3,8 @@ updates:
   - package-ecosystem: cargo
     directories: ["/"]
     schedule:
-      interval: monthly
+      interval: weekly
+  - package-ecosystem: github-actions
+    directories: ["/"]
+    schedule:
+      interval: weekly
